Edit with my configs <3

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Mark Otto
-  email = markdotto@gmail.com
+  name = Pedro Felipe
+  email = pedro@pedorfelipe.com.br
 
 [alias]
   co = checkout
